--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:backend": "npm --prefix backend test"
+    "test:backend:unit": "npm --prefix backend run test:unit",
+    "test:backend:integration": "npm --prefix backend run test:integration"
   },
   "keywords": [],
   "author": "",
