Use a common QueryExecutionError for db related errors

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "strict": true,
     "outDir": "./dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noUnusedLocals": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts", "tests/integration/globalSetup.integration.ts"],
   "exclude": ["node_modules"]
